Add nav hamburger animation

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
   </head>
   <body>
     <header>
-      <div class="menu">
+      <nav class="navigation">
         <img src="img/MoGo.png" alt="MoGo logo">
-        <div class="menu__hamburger"></div>
-        <ul class="menu__list">
+        <div class="navigation__hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <ul class="navigation__list">
           <li>About</li>
           <li>Service</li>
           <li>Work</li>
           <li>Blog</li>
           <li>Contact</li>
         </ul>
-      </div>
+      </nav>
       <div class="banner">
         <h2>Creative Template</h2>
         <h1>WELCOME TO MOGO</h1>
@@ -405,6 +409,6 @@
       <p>© 2016 MoGo free PSD template by Laaqiq</p>
     </footer>
     
-    <script src="" async defer></script>
+    <script src="js/index.js" async defer></script>
   </body>
 </html>
