Finish mobile header

--- a/index.html
+++ b/index.html
@@ -30,16 +30,29 @@
           <button>Contact</button>
         </div>
       </nav>
+      <div class="hero">
+        <img 
+        alt="Nosediving eagle"
+        srcset="
+        img/main-img-tablet.jpg 700w,
+        img/main-img-tablet-XL.jpg 900w,
+        img/main-img-laptop.jpg 1200w,
+        img/main-img.jpg 1400w
+        "
+        src="img/main-img-mobile.jpg"\
+        sizes="100vw"
+        > 
+      </div>
       <div class="banner">
         <h2>Creative Template</h2>
-        <h1>WELCOME TO MOGO</h1>
+        <h1>WELCOME<br>TO MOGO</h1>
         <button>Learn more</button>
       </div>
       <div class="menu-shadow">
-        <div>01 Intro</div>
-        <div>02 Work</div>
-        <div>03 About</div>
-        <div>04 Contact</div>
+        <span>01 Intro</span>
+        <span>02 Work</span>
+        <span>03 About</span>
+        <span>04 Contact</span>
       </div>
     </header>
     <main>
