Finish design mobile layout

--- a/index.html
+++ b/index.html
@@ -163,16 +163,14 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
       </div>
     </article>
-    <article>
-      <div>
+    <article class="design">
+      <div class="design__title">
         <h4>For all devices</h4>
         <h3>Unique Design</h3>
       </div>
-      <img src="img/unique-tablet.png" alt="Tablet">
-      <div class="phone">
-        <img src="img/iphone.png" alt="Iphone">
-        <img src="img/unique-phone.jpg" alt="Iphone wallpaper">
-      </div>
+      <img class="design__background" src="img/unique-background-mobile.jpg" alt="">
+      <img class="design__tablet" src="img/unique-tablet.png" alt="Tablet">
+      <img class="design__phone" src="img/iphone.png" alt="Iphone">
     </article>
     <article>
       <div>
