--- a/index.html
+++ b/index.html
@@ -194,9 +194,11 @@
             <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#95e1d3"/>
           </svg>
           <h4 class="we-do__info__element__title">Photography</h4>
-          <svg class="we-do__info__element__arrow js-open__turn" xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
-            <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
-          </svg>
+          <button class="we-do__info__element__arrow js-open__turn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+              <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+            </svg>
+          </button>
           <div class="we-do__info__element__des js-open__des">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
@@ -208,9 +210,11 @@
           </svg>
           
           <h4 class="we-do__info__element__title">Creativity</h4>
-          <svg class="we-do__info__element__arrow" xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
-            <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
-          </svg>
+          <button class="we-do__info__element__arrow js-open__turn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+              <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+            </svg>
+          </button>
           <div class="we-do__info__element__des">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
@@ -221,9 +225,11 @@
             <path id="BULLSEYE" d="M991,4286a16,16,0,1,1,16-16A16,16,0,0,1,991,4286Zm0-29a13,13,0,1,0,13,13A13,13,0,0,0,991,4257Zm0,22.5a9.5,9.5,0,1,1,9.5-9.5A9.5,9.5,0,0,1,991,4279.5Zm0-16a6.5,6.5,0,1,0,6.5,6.5A6.5,6.5,0,0,0,991,4263.5Zm0,9.5a3,3,0,1,1,3-3A3,3,0,0,1,991,4273Z" transform="translate(-975 -4253.998)" fill="#95e1d3"/>
           </svg>          
           <h4 class="we-do__info__element__title">Web Design</h4>
-          <svg class="we-do__info__element__arrow" xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
-            <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
-          </svg>
+          <button class="we-do__info__element__arrow js-open__turn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+              <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+            </svg>
+          </button>
           <div class="we-do__info__element__des">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
@@ -231,14 +237,22 @@
         </div>
       </div>
     </article>
-    <article>
-      <div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="63" height="61.001" viewBox="0 0 63 61.001">
+    <article class="testimonials-inline">
+      <button class="testimonials-inline__arrow-left">
+        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+          <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+        </svg>
+      </button>
+        <svg class="testimonials-inline__icon" xmlns="http://www.w3.org/2000/svg" width="63" height="61.001" viewBox="0 0 63 61.001">
           <path id="SPEECH_4" data-name="SPEECH 4" d="M574,4571h-2v5h0a3.014,3.014,0,0,1-.061.6,2.928,2.928,0,0,1-.122.393c-.02.057-.03.117-.053.169a2.927,2.927,0,0,1-.177.327c-.035.061-.061.126-.1.185a3.1,3.1,0,0,1-.333.4c-.012.013-.021.028-.033.04a2.984,2.984,0,0,1-2.084.875c-.013,0-.024,0-.037,0h0a2.986,2.986,0,0,1-2.121-.878L559.757,4571H532a3,3,0,0,1-3-3v-30a3,3,0,0,1,3-3h42a3,3,0,0,1,3,3v30A3,3,0,0,1,574,4571Zm-15.485,3,6.326,6.326.008-.008A5.968,5.968,0,0,0,569,4582v2a3,3,0,0,1-3,3H534.243l-8.121,8.123A2.992,2.992,0,0,1,524,4596h0c-.013,0-.024,0-.037,0a3,3,0,0,1-2.084-.875c-.012-.013-.021-.029-.033-.042a2.916,2.916,0,0,1-.333-.4c-.039-.057-.065-.122-.1-.183a3.094,3.094,0,0,1-.177-.325c-.023-.055-.033-.115-.053-.171a2.959,2.959,0,0,1-.122-.393,3.007,3.007,0,0,1-.061-.6h0v-6h-4a3,3,0,0,1-3-3v-34h0a3,3,0,0,1,3-3h9v21a6,6,0,0,0,6,6Z" transform="translate(-514 -4534.997)" fill="#95e1d3"/>
         </svg>
-        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
-        <p>Jon Doe</p>
-      </div>
+        <p class="testimonials-inline__opinion">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+        <p class="testimonials-inline__name">Jon Doe</p>
+        <button class="testimonials-inline__arrow-right">
+          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+            <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+          </svg>
+        </button>
     </article>
     <article>
       <div>
