--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           </svg>
           
           <h4 class="we-do__info__element__title">Creativity</h4>
-          <button class="we-do__info__element__arrow js-open__turn">
+          <button class="we-do__info__element__arrow">
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
               <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
             </svg>
@@ -225,7 +225,7 @@
             <path id="BULLSEYE" d="M991,4286a16,16,0,1,1,16-16A16,16,0,0,1,991,4286Zm0-29a13,13,0,1,0,13,13A13,13,0,0,0,991,4257Zm0,22.5a9.5,9.5,0,1,1,9.5-9.5A9.5,9.5,0,0,1,991,4279.5Zm0-16a6.5,6.5,0,1,0,6.5,6.5A6.5,6.5,0,0,0,991,4263.5Zm0,9.5a3,3,0,1,1,3-3A3,3,0,0,1,991,4273Z" transform="translate(-975 -4253.998)" fill="#95e1d3"/>
           </svg>          
           <h4 class="we-do__info__element__title">Web Design</h4>
-          <button class="we-do__info__element__arrow js-open__turn">
+          <button class="we-do__info__element__arrow">
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
               <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
             </svg>
@@ -254,26 +254,98 @@
           </svg>
         </button>
     </article>
-    <article>
-      <div>
+    <article class="team">
+      <div class="team__title">
         <h4>Who we are</h4>
         <h3>Meet Our Team</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div>
-        <img src="img/team-1.jpg" alt="">
-        <p>Matthew Dix</p>
-        <p>Graphic Design</p>
+      <p class="team__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="team__member">
+        <div class="team__member__img">
+          <img src="img/team-1.jpg" alt="">
+          <div class="team__member__img__social">
+            <a href="https://www.facebook.com/" target="_blank">
+              <svg id="facebook" xmlns="http://www.w3.org/2000/svg" width="7.505" height="16.006" viewBox="0 0 7.505 16.006">
+                <path id="facebook-2" data-name="facebook" d="M454.993,9776.015v2.575s-1.9-.188-2.374.538a7.322,7.322,0,0,0-.129,2.4h2.518c-.213.978-.365,1.64-.522,2.486h-2.01v8h-3.489c0-2.467,0-5.345,0-7.971H447.5v-2.518h1.468c.075-1.842.1-3.666,1.018-4.594C451.018,9775.889,452,9776.015,454.993,9776.015Z" transform="translate(-447.504 -9776.01)"/>
+              </svg>
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="20.778" viewBox="0 0 25.6 20.778">
+                <path id="twitter" d="M516.513,5314.6a5.4,5.4,0,0,1,4.151,1.647,8.494,8.494,0,0,0,2.691-.907l.653-.357a5.253,5.253,0,0,1-1.7,2.465,2.526,2.526,0,0,1-.577.409v.013a9.852,9.852,0,0,0,2.973-.8v.013a8.5,8.5,0,0,1-1.781,2.044l-.82.651a15.043,15.043,0,0,1-.243,3.373c-1.312,5.9-4.787,9.9-10.289,11.612a15.722,15.722,0,0,1-7.431.306,19.191,19.191,0,0,1-3.088-1.008,12.3,12.3,0,0,1-1.486-.767l-.461-.281a8.519,8.519,0,0,0,1.678.063c.516-.083,1.023-.061,1.5-.166a10.753,10.753,0,0,0,3.152-1.137,5.855,5.855,0,0,0,1.422-.932,4.474,4.474,0,0,1-1.563-.281,5.275,5.275,0,0,1-3.331-3.36c.515.057,2,.19,2.345-.1a3.844,3.844,0,0,1-1.717-.689,5.053,5.053,0,0,1-2.473-4.5l.538.255a5.776,5.776,0,0,0,1.1.307,1.569,1.569,0,0,0,.718.063h-.026c-.265-.307-.7-.513-.961-.843a5.365,5.365,0,0,1-1.179-4.765,6.1,6.1,0,0,1,.564-1.367l.026.012a3.2,3.2,0,0,0,.474.55,9.621,9.621,0,0,0,1.563,1.494,15.462,15.462,0,0,0,6.419,3.1,10.014,10.014,0,0,0,2.358.307,4.881,4.881,0,0,1,.026-2.466,5.179,5.179,0,0,1,2.973-3.525,6.3,6.3,0,0,1,1.166-.358Z" transform="translate(-499.1 -5314.6)"/>
+              </svg>
+            </a>
+            <a href="https://www.pinterest.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="19.594" height="25.657" viewBox="0 0 19.594 25.657">
+                <path id="pinterest" d="M566.051,5328.854c-.209.833-.42,1.707-.638,2.561a19.56,19.56,0,0,1-.718,2.47,12.648,12.648,0,0,1-2.044,3.521c-.575.667-.452.4-.625.365-.132-.027-.144-.157-.169-.345a19.292,19.292,0,0,1,.008-3.339,18.041,18.041,0,0,1,.588-3.471c.484-2.064.946-4.087,1.435-6.164a1.369,1.369,0,0,0,.09-.445,6.41,6.41,0,0,1-.429-1.7,5.41,5.41,0,0,1,.139-1.943,3.208,3.208,0,0,1,1.894-2.338,2.171,2.171,0,0,1,1.734.132,1.883,1.883,0,0,1,.867,1.245,4.491,4.491,0,0,1-.08,1.892c-.267,1.218-.618,2.133-.937,3.309a3.642,3.642,0,0,0-.189,1.812,2.105,2.105,0,0,0,.848,1.275,2.464,2.464,0,0,0,1.625.456,3.552,3.552,0,0,0,2.652-1.568,9.269,9.269,0,0,0,1.674-4.686,11.514,11.514,0,0,0,.07-2.014,5.48,5.48,0,0,0-1.126-3.117,5.28,5.28,0,0,0-2.512-1.71,8.336,8.336,0,0,0-3.748-.233,6.636,6.636,0,0,0-4.914,3.533,7.078,7.078,0,0,0-.837,3.41,4.427,4.427,0,0,0,.678,2.5c.133.2.328.367.458.6.185.326-.029.812-.12,1.164-.11.425-.121,1.012-.618,1.022a1.512,1.512,0,0,1-.638-.243,5.117,5.117,0,0,1-2.422-3.734,8.937,8.937,0,0,1,0-3.238,9.214,9.214,0,0,1,4.4-6.144,10.441,10.441,0,0,1,3.907-1.346c.508-.075,1.034-.1,1.6-.132a9.638,9.638,0,0,1,4.326.81,8.848,8.848,0,0,1,2.98,2.146,8.123,8.123,0,0,1,1.834,3.31,7.977,7.977,0,0,1,.4,2.287,13.723,13.723,0,0,1-.308,2.368,9.328,9.328,0,0,1-3.838,6.458,6.643,6.643,0,0,1-1.754.81,6.409,6.409,0,0,1-2.243.283,4.6,4.6,0,0,1-1.984-.577A3.285,3.285,0,0,1,566.051,5328.854Z" transform="translate(-557.899 -5312.195)"/>
+              </svg>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="25.6" viewBox="0 0 25.6 25.6">
+                <path id="instagram" d="M632.7,5337.8H613.5a3.2,3.2,0,0,1-3.2-3.2v-19.2a3.2,3.2,0,0,1,3.2-3.2h19.2a3.2,3.2,0,0,1,3.2,3.2v19.2A3.2,3.2,0,0,1,632.7,5337.8Zm-9.6-17.76a4.957,4.957,0,0,0-4.5,2.88h0c-.008.018-.014.037-.022.055-.047.1-.089.213-.129.321-.019.053-.04.1-.057.156-.036.111-.067.225-.1.34-.013.054-.029.106-.041.16-.026.121-.044.244-.061.368-.007.05-.017.1-.023.15a4.96,4.96,0,1,0,9.862,0c-.005-.051-.016-.1-.023-.15-.017-.124-.035-.247-.061-.368-.012-.054-.028-.106-.041-.16-.029-.115-.059-.229-.1-.34-.017-.052-.038-.1-.057-.156-.04-.108-.081-.216-.129-.321-.008-.018-.014-.037-.022-.055h0A4.957,4.957,0,0,0,623.1,5320.04Zm9.92-3.68a1.28,1.28,0,0,0-1.28-1.28h-2.56a1.28,1.28,0,0,0-1.28,1.28v2.561a1.28,1.28,0,0,0,1.28,1.28h2.56a1.28,1.28,0,0,0,1.28-1.28Zm0,6.56h-2.36a7.84,7.84,0,1,1-15.121,0h-2.36v10.72a1.28,1.28,0,0,0,1.28,1.281h17.28a1.28,1.28,0,0,0,1.28-1.281Z" transform="translate(-610.3 -5312.2)"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <p class="team__member__name">Matthew Dix</p>
+        <p class="team__member__occupation">Graphic Design</p>
       </div>
-      <div>
-        <img src="img/team-2.jpg" alt="">
-        <p>Christopher Campbell</p>
-        <p>Branding/UX desigh</p>
+      <div class="team__member">
+        <div class="team__member__img">
+          <img src="img/team-2.jpg" alt="">
+          <div class="team__member__img__social">
+            <a href="https://www.facebook.com/" target="_blank">
+              <svg id="facebook" xmlns="http://www.w3.org/2000/svg" width="7.505" height="16.006" viewBox="0 0 7.505 16.006">
+                <path id="facebook-2" data-name="facebook" d="M454.993,9776.015v2.575s-1.9-.188-2.374.538a7.322,7.322,0,0,0-.129,2.4h2.518c-.213.978-.365,1.64-.522,2.486h-2.01v8h-3.489c0-2.467,0-5.345,0-7.971H447.5v-2.518h1.468c.075-1.842.1-3.666,1.018-4.594C451.018,9775.889,452,9776.015,454.993,9776.015Z" transform="translate(-447.504 -9776.01)"/>
+              </svg>
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="20.778" viewBox="0 0 25.6 20.778">
+                <path id="twitter" d="M516.513,5314.6a5.4,5.4,0,0,1,4.151,1.647,8.494,8.494,0,0,0,2.691-.907l.653-.357a5.253,5.253,0,0,1-1.7,2.465,2.526,2.526,0,0,1-.577.409v.013a9.852,9.852,0,0,0,2.973-.8v.013a8.5,8.5,0,0,1-1.781,2.044l-.82.651a15.043,15.043,0,0,1-.243,3.373c-1.312,5.9-4.787,9.9-10.289,11.612a15.722,15.722,0,0,1-7.431.306,19.191,19.191,0,0,1-3.088-1.008,12.3,12.3,0,0,1-1.486-.767l-.461-.281a8.519,8.519,0,0,0,1.678.063c.516-.083,1.023-.061,1.5-.166a10.753,10.753,0,0,0,3.152-1.137,5.855,5.855,0,0,0,1.422-.932,4.474,4.474,0,0,1-1.563-.281,5.275,5.275,0,0,1-3.331-3.36c.515.057,2,.19,2.345-.1a3.844,3.844,0,0,1-1.717-.689,5.053,5.053,0,0,1-2.473-4.5l.538.255a5.776,5.776,0,0,0,1.1.307,1.569,1.569,0,0,0,.718.063h-.026c-.265-.307-.7-.513-.961-.843a5.365,5.365,0,0,1-1.179-4.765,6.1,6.1,0,0,1,.564-1.367l.026.012a3.2,3.2,0,0,0,.474.55,9.621,9.621,0,0,0,1.563,1.494,15.462,15.462,0,0,0,6.419,3.1,10.014,10.014,0,0,0,2.358.307,4.881,4.881,0,0,1,.026-2.466,5.179,5.179,0,0,1,2.973-3.525,6.3,6.3,0,0,1,1.166-.358Z" transform="translate(-499.1 -5314.6)"/>
+              </svg>
+            </a>
+            <a href="https://www.pinterest.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="19.594" height="25.657" viewBox="0 0 19.594 25.657">
+                <path id="pinterest" d="M566.051,5328.854c-.209.833-.42,1.707-.638,2.561a19.56,19.56,0,0,1-.718,2.47,12.648,12.648,0,0,1-2.044,3.521c-.575.667-.452.4-.625.365-.132-.027-.144-.157-.169-.345a19.292,19.292,0,0,1,.008-3.339,18.041,18.041,0,0,1,.588-3.471c.484-2.064.946-4.087,1.435-6.164a1.369,1.369,0,0,0,.09-.445,6.41,6.41,0,0,1-.429-1.7,5.41,5.41,0,0,1,.139-1.943,3.208,3.208,0,0,1,1.894-2.338,2.171,2.171,0,0,1,1.734.132,1.883,1.883,0,0,1,.867,1.245,4.491,4.491,0,0,1-.08,1.892c-.267,1.218-.618,2.133-.937,3.309a3.642,3.642,0,0,0-.189,1.812,2.105,2.105,0,0,0,.848,1.275,2.464,2.464,0,0,0,1.625.456,3.552,3.552,0,0,0,2.652-1.568,9.269,9.269,0,0,0,1.674-4.686,11.514,11.514,0,0,0,.07-2.014,5.48,5.48,0,0,0-1.126-3.117,5.28,5.28,0,0,0-2.512-1.71,8.336,8.336,0,0,0-3.748-.233,6.636,6.636,0,0,0-4.914,3.533,7.078,7.078,0,0,0-.837,3.41,4.427,4.427,0,0,0,.678,2.5c.133.2.328.367.458.6.185.326-.029.812-.12,1.164-.11.425-.121,1.012-.618,1.022a1.512,1.512,0,0,1-.638-.243,5.117,5.117,0,0,1-2.422-3.734,8.937,8.937,0,0,1,0-3.238,9.214,9.214,0,0,1,4.4-6.144,10.441,10.441,0,0,1,3.907-1.346c.508-.075,1.034-.1,1.6-.132a9.638,9.638,0,0,1,4.326.81,8.848,8.848,0,0,1,2.98,2.146,8.123,8.123,0,0,1,1.834,3.31,7.977,7.977,0,0,1,.4,2.287,13.723,13.723,0,0,1-.308,2.368,9.328,9.328,0,0,1-3.838,6.458,6.643,6.643,0,0,1-1.754.81,6.409,6.409,0,0,1-2.243.283,4.6,4.6,0,0,1-1.984-.577A3.285,3.285,0,0,1,566.051,5328.854Z" transform="translate(-557.899 -5312.195)"/>
+              </svg>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="25.6" viewBox="0 0 25.6 25.6">
+                <path id="instagram" d="M632.7,5337.8H613.5a3.2,3.2,0,0,1-3.2-3.2v-19.2a3.2,3.2,0,0,1,3.2-3.2h19.2a3.2,3.2,0,0,1,3.2,3.2v19.2A3.2,3.2,0,0,1,632.7,5337.8Zm-9.6-17.76a4.957,4.957,0,0,0-4.5,2.88h0c-.008.018-.014.037-.022.055-.047.1-.089.213-.129.321-.019.053-.04.1-.057.156-.036.111-.067.225-.1.34-.013.054-.029.106-.041.16-.026.121-.044.244-.061.368-.007.05-.017.1-.023.15a4.96,4.96,0,1,0,9.862,0c-.005-.051-.016-.1-.023-.15-.017-.124-.035-.247-.061-.368-.012-.054-.028-.106-.041-.16-.029-.115-.059-.229-.1-.34-.017-.052-.038-.1-.057-.156-.04-.108-.081-.216-.129-.321-.008-.018-.014-.037-.022-.055h0A4.957,4.957,0,0,0,623.1,5320.04Zm9.92-3.68a1.28,1.28,0,0,0-1.28-1.28h-2.56a1.28,1.28,0,0,0-1.28,1.28v2.561a1.28,1.28,0,0,0,1.28,1.28h2.56a1.28,1.28,0,0,0,1.28-1.28Zm0,6.56h-2.36a7.84,7.84,0,1,1-15.121,0h-2.36v10.72a1.28,1.28,0,0,0,1.28,1.281h17.28a1.28,1.28,0,0,0,1.28-1.281Z" transform="translate(-610.3 -5312.2)"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <p class="team__member__name">Christopher Campbell</p>
+        <p class="team__member__occupation">Branding/UX desigh</p>
       </div>
-      <div>
-        <img src="img/team-3.jpg" alt="">
-        <p>Michael Fertig</p>
-        <p>Developer</p>
+      <div class="team__member">
+        <div class="team__member__img">
+          <img src="img/team-3.jpg" alt="">
+          <div class="team__member__img__social">
+            <a href="https://www.facebook.com/" target="_blank">
+              <svg id="facebook" xmlns="http://www.w3.org/2000/svg" width="7.505" height="16.006" viewBox="0 0 7.505 16.006">
+                <path id="facebook-2" data-name="facebook" d="M454.993,9776.015v2.575s-1.9-.188-2.374.538a7.322,7.322,0,0,0-.129,2.4h2.518c-.213.978-.365,1.64-.522,2.486h-2.01v8h-3.489c0-2.467,0-5.345,0-7.971H447.5v-2.518h1.468c.075-1.842.1-3.666,1.018-4.594C451.018,9775.889,452,9776.015,454.993,9776.015Z" transform="translate(-447.504 -9776.01)"/>
+              </svg>
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="20.778" viewBox="0 0 25.6 20.778">
+                <path id="twitter" d="M516.513,5314.6a5.4,5.4,0,0,1,4.151,1.647,8.494,8.494,0,0,0,2.691-.907l.653-.357a5.253,5.253,0,0,1-1.7,2.465,2.526,2.526,0,0,1-.577.409v.013a9.852,9.852,0,0,0,2.973-.8v.013a8.5,8.5,0,0,1-1.781,2.044l-.82.651a15.043,15.043,0,0,1-.243,3.373c-1.312,5.9-4.787,9.9-10.289,11.612a15.722,15.722,0,0,1-7.431.306,19.191,19.191,0,0,1-3.088-1.008,12.3,12.3,0,0,1-1.486-.767l-.461-.281a8.519,8.519,0,0,0,1.678.063c.516-.083,1.023-.061,1.5-.166a10.753,10.753,0,0,0,3.152-1.137,5.855,5.855,0,0,0,1.422-.932,4.474,4.474,0,0,1-1.563-.281,5.275,5.275,0,0,1-3.331-3.36c.515.057,2,.19,2.345-.1a3.844,3.844,0,0,1-1.717-.689,5.053,5.053,0,0,1-2.473-4.5l.538.255a5.776,5.776,0,0,0,1.1.307,1.569,1.569,0,0,0,.718.063h-.026c-.265-.307-.7-.513-.961-.843a5.365,5.365,0,0,1-1.179-4.765,6.1,6.1,0,0,1,.564-1.367l.026.012a3.2,3.2,0,0,0,.474.55,9.621,9.621,0,0,0,1.563,1.494,15.462,15.462,0,0,0,6.419,3.1,10.014,10.014,0,0,0,2.358.307,4.881,4.881,0,0,1,.026-2.466,5.179,5.179,0,0,1,2.973-3.525,6.3,6.3,0,0,1,1.166-.358Z" transform="translate(-499.1 -5314.6)"/>
+              </svg>
+            </a>
+            <a href="https://www.pinterest.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="19.594" height="25.657" viewBox="0 0 19.594 25.657">
+                <path id="pinterest" d="M566.051,5328.854c-.209.833-.42,1.707-.638,2.561a19.56,19.56,0,0,1-.718,2.47,12.648,12.648,0,0,1-2.044,3.521c-.575.667-.452.4-.625.365-.132-.027-.144-.157-.169-.345a19.292,19.292,0,0,1,.008-3.339,18.041,18.041,0,0,1,.588-3.471c.484-2.064.946-4.087,1.435-6.164a1.369,1.369,0,0,0,.09-.445,6.41,6.41,0,0,1-.429-1.7,5.41,5.41,0,0,1,.139-1.943,3.208,3.208,0,0,1,1.894-2.338,2.171,2.171,0,0,1,1.734.132,1.883,1.883,0,0,1,.867,1.245,4.491,4.491,0,0,1-.08,1.892c-.267,1.218-.618,2.133-.937,3.309a3.642,3.642,0,0,0-.189,1.812,2.105,2.105,0,0,0,.848,1.275,2.464,2.464,0,0,0,1.625.456,3.552,3.552,0,0,0,2.652-1.568,9.269,9.269,0,0,0,1.674-4.686,11.514,11.514,0,0,0,.07-2.014,5.48,5.48,0,0,0-1.126-3.117,5.28,5.28,0,0,0-2.512-1.71,8.336,8.336,0,0,0-3.748-.233,6.636,6.636,0,0,0-4.914,3.533,7.078,7.078,0,0,0-.837,3.41,4.427,4.427,0,0,0,.678,2.5c.133.2.328.367.458.6.185.326-.029.812-.12,1.164-.11.425-.121,1.012-.618,1.022a1.512,1.512,0,0,1-.638-.243,5.117,5.117,0,0,1-2.422-3.734,8.937,8.937,0,0,1,0-3.238,9.214,9.214,0,0,1,4.4-6.144,10.441,10.441,0,0,1,3.907-1.346c.508-.075,1.034-.1,1.6-.132a9.638,9.638,0,0,1,4.326.81,8.848,8.848,0,0,1,2.98,2.146,8.123,8.123,0,0,1,1.834,3.31,7.977,7.977,0,0,1,.4,2.287,13.723,13.723,0,0,1-.308,2.368,9.328,9.328,0,0,1-3.838,6.458,6.643,6.643,0,0,1-1.754.81,6.409,6.409,0,0,1-2.243.283,4.6,4.6,0,0,1-1.984-.577A3.285,3.285,0,0,1,566.051,5328.854Z" transform="translate(-557.899 -5312.195)"/>
+              </svg>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="25.6" viewBox="0 0 25.6 25.6">
+                <path id="instagram" d="M632.7,5337.8H613.5a3.2,3.2,0,0,1-3.2-3.2v-19.2a3.2,3.2,0,0,1,3.2-3.2h19.2a3.2,3.2,0,0,1,3.2,3.2v19.2A3.2,3.2,0,0,1,632.7,5337.8Zm-9.6-17.76a4.957,4.957,0,0,0-4.5,2.88h0c-.008.018-.014.037-.022.055-.047.1-.089.213-.129.321-.019.053-.04.1-.057.156-.036.111-.067.225-.1.34-.013.054-.029.106-.041.16-.026.121-.044.244-.061.368-.007.05-.017.1-.023.15a4.96,4.96,0,1,0,9.862,0c-.005-.051-.016-.1-.023-.15-.017-.124-.035-.247-.061-.368-.012-.054-.028-.106-.041-.16-.029-.115-.059-.229-.1-.34-.017-.052-.038-.1-.057-.156-.04-.108-.081-.216-.129-.321-.008-.018-.014-.037-.022-.055h0A4.957,4.957,0,0,0,623.1,5320.04Zm9.92-3.68a1.28,1.28,0,0,0-1.28-1.28h-2.56a1.28,1.28,0,0,0-1.28,1.28v2.561a1.28,1.28,0,0,0,1.28,1.28h2.56a1.28,1.28,0,0,0,1.28-1.28Zm0,6.56h-2.36a7.84,7.84,0,1,1-15.121,0h-2.36v10.72a1.28,1.28,0,0,0,1.28,1.281h17.28a1.28,1.28,0,0,0,1.28-1.281Z" transform="translate(-610.3 -5312.2)"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <p class="team__member__name">Michael Fertig</p>
+        <p class="team__member__occupation">Developer</p>
       </div>
     </article>
     <article>
