--- a/index.html
+++ b/index.html
@@ -348,28 +348,91 @@
         <p class="team__member__occupation">Developer</p>
       </div>
     </article>
-    <article>
-      <img src="img/barber-6.png" alt="">
-      <img src="img/barber-2.png" alt="">
-      <img src="img/barber-3.png" alt="">
-      <img src="img/barber-4.png" alt="">
-      <img src="img/barber-5.png" alt="">
-      <img src="img/barber-6.png" alt="">
+    <article class="barbers">
+      <img src="img/barber-6.jpg" alt="">
+      <img src="img/barber-2.jpg" alt="">
+      <img src="img/barber-3.jpg" alt="">
+      <img src="img/barber-4.jpg" alt="">
+      <img src="img/barber-5.jpg" alt="">
+      <img src="img/barber-6.jpg" alt="">
     </article>
-    <article>
-      <div>
+    <article class="projects">
+      <div class="projects__title">
         <h4>What We Do</h4>
         <h3>Some Of Our Work</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div>
-        <img src="img/big-gallery-1.jpg" alt="">
-        <img src="img/big-gallery-2.jpg" alt="">
-        <img src="img/big-gallery-3.jpg" alt="">
-        <img src="img/big-gallery-4.jpg" alt="">
-        <img src="img/big-gallery-5.jpg" alt="">
-        <img src="img/big-gallery-6.jpg" alt="">
-        <img src="img/big-gallery-7.jpg" alt="">
+      <p class="projects__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="projects__gallery">
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-1.jpg" alt="">
+        </div>
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-2.jpg" alt="">
+        </div>
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-3.jpg" alt="">
+        </div>
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-4.jpg" alt="">
+        </div>
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-5.jpg" alt="">
+        </div>
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-6.jpg" alt="">
+        </div>
+        <div class="projects__gallery__img">
+          <div class="projects__gallery__img__info">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+              <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#ffffff"/>
+            </svg>
+            <p>Creatively Designed</p>                
+            <p>Lorem ipsum dolor sit</p>                
+          </div>
+          <img src="img/big-gallery-7.jpg" alt="">
+        </div>
       </div>
     </article>
     <article>
