Finish testimonials-grid mobile layout

--- a/index.html
+++ b/index.html
@@ -435,35 +435,62 @@
         </div>
       </div>
     </article>
-    <article>
-      <div>
-        <img src="img/testimonials-slide.jpg" alt="">
-        <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
-        <p>Joshua Earle</p>
-      </div>
+    <article class="testimonials-inline">
+      <button class="testimonials-inline__arrow-left">
+        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+          <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+        </svg>
+      </button>
+      <img src="img/testimonials-slide.jpg" alt="">
+        <p class="testimonials-inline__opinion">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+        <p class="testimonials-inline__name">Jon Doe</p>
+        <button class="testimonials-inline__arrow-right">
+          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
+            <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
+          </svg>
+        </button>
     </article>
-    <article>
-      <div>
+    <article class="testimonials-grid">
+      <div class="testimonials-grid__hero">
+        <img 
+          alt="Nosediving eagle"
+          srcset="
+          img/unique-background-tablet.jpg 700w,
+          img/unique-background-tablet-XL.jpg 900w,
+          img/unique-background-laptop.jpg 1200w,
+          img/unique-background.jpg 1400w
+          "
+          src="img/unique-background-mobile.jpg"\
+          sizes="100vw"
+          >
+      </div>
+      <div class="testimonials-grid__title">
         <h4>Happy Clients</h4>
         <h3>What People Say</h3>
       </div>
-      <div>
-        <div>
-          <img src="img/client-1.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-        </div>
-        <div>
-          <img src="img/client-2.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-        </div>
-        <div>
-          <img src="img/client-3.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-        </div>
-        <div>
-          <img src="img/client-4.jpg" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
-        </div>
+      <div class="testimonials-grid__client">
+        <img src="img/client-1.jpg" alt="">
+        <p class="testimonials-grid__client__name">Matthew Dix</p>
+        <p class="testimonials-grid__client__occupation">Graphic Design</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+      </div>
+      <div class="testimonials-grid__client">
+        <img src="img/client-2.jpg" alt="">
+        <p class="testimonials-grid__client__name">Jaelynn Castillo</p>
+        <p class="testimonials-grid__client__occupation">Graphic Design</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+      </div>
+      <div class="testimonials-grid__client">
+        <img src="img/client-3.jpg" alt="">
+        <p class="testimonials-grid__client__name">Nick Karvounis</p>
+        <p class="testimonials-grid__client__occupation">Graphic Design</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+      </div>
+      <div class="testimonials-grid__client">
+        <img src="img/client-4.jpg" alt="">
+        <p class="testimonials-grid__client__name">Mike Petrucci</p>
+        <p class="testimonials-grid__client__occupation">Graphic Design</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
       </div>
     </article>
     <article>
