Finish info and footer mobile layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>MoGo - creative design</title>
+    <meta name="author" content="Ernest Szczeblewski">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet"> 
@@ -577,65 +578,87 @@
         <h3>Open Map</h3>
       </div>
     </article>
-    <article>
-      <div>
+    <article class="info">
+      <div class="info__company">
         <h2>MoGo</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        <p class="info__company__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
         </p>
-        <p>15k followers</p>
-        <div>
+        <p class="info__company__followers"><span>15k</span> followers</p>
+        <div class="info__social-media">
           <p>Follow Us:</p>
-          <svg id="facebook" xmlns="http://www.w3.org/2000/svg" width="7.505" height="16.006" viewBox="0 0 7.505 16.006">
-            <path id="facebook-2" data-name="facebook" d="M454.993,9776.015v2.575s-1.9-.188-2.374.538a7.322,7.322,0,0,0-.129,2.4h2.518c-.213.978-.365,1.64-.522,2.486h-2.01v8h-3.489c0-2.467,0-5.345,0-7.971H447.5v-2.518h1.468c.075-1.842.1-3.666,1.018-4.594C451.018,9775.889,452,9776.015,454.993,9776.015Z" transform="translate(-447.504 -9776.01)" fill="#95e1d3"/>
-          </svg>                   
-          <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="20.778" viewBox="0 0 25.6 20.778">
-            <path id="twitter" d="M516.513,5314.6a5.4,5.4,0,0,1,4.151,1.647,8.494,8.494,0,0,0,2.691-.907l.653-.357a5.253,5.253,0,0,1-1.7,2.465,2.526,2.526,0,0,1-.577.409v.013a9.852,9.852,0,0,0,2.973-.8v.013a8.5,8.5,0,0,1-1.781,2.044l-.82.651a15.043,15.043,0,0,1-.243,3.373c-1.312,5.9-4.787,9.9-10.289,11.612a15.722,15.722,0,0,1-7.431.306,19.191,19.191,0,0,1-3.088-1.008,12.3,12.3,0,0,1-1.486-.767l-.461-.281a8.519,8.519,0,0,0,1.678.063c.516-.083,1.023-.061,1.5-.166a10.753,10.753,0,0,0,3.152-1.137,5.855,5.855,0,0,0,1.422-.932,4.474,4.474,0,0,1-1.563-.281,5.275,5.275,0,0,1-3.331-3.36c.515.057,2,.19,2.345-.1a3.844,3.844,0,0,1-1.717-.689,5.053,5.053,0,0,1-2.473-4.5l.538.255a5.776,5.776,0,0,0,1.1.307,1.569,1.569,0,0,0,.718.063h-.026c-.265-.307-.7-.513-.961-.843a5.365,5.365,0,0,1-1.179-4.765,6.1,6.1,0,0,1,.564-1.367l.026.012a3.2,3.2,0,0,0,.474.55,9.621,9.621,0,0,0,1.563,1.494,15.462,15.462,0,0,0,6.419,3.1,10.014,10.014,0,0,0,2.358.307,4.881,4.881,0,0,1,.026-2.466,5.179,5.179,0,0,1,2.973-3.525,6.3,6.3,0,0,1,1.166-.358Z" transform="translate(-499.1 -5314.6)" fill="#f38181"/>
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="25.6" height="25.6" viewBox="0 0 25.6 25.6">
-            <path id="instagram" d="M632.7,5337.8H613.5a3.2,3.2,0,0,1-3.2-3.2v-19.2a3.2,3.2,0,0,1,3.2-3.2h19.2a3.2,3.2,0,0,1,3.2,3.2v19.2A3.2,3.2,0,0,1,632.7,5337.8Zm-9.6-17.76a4.957,4.957,0,0,0-4.5,2.88h0c-.008.018-.014.037-.022.055-.047.1-.089.213-.129.321-.019.053-.04.1-.057.156-.036.111-.067.225-.1.34-.013.054-.029.106-.041.16-.026.121-.044.244-.061.368-.007.05-.017.1-.023.15a4.96,4.96,0,1,0,9.862,0c-.005-.051-.016-.1-.023-.15-.017-.124-.035-.247-.061-.368-.012-.054-.028-.106-.041-.16-.029-.115-.059-.229-.1-.34-.017-.052-.038-.1-.057-.156-.04-.108-.081-.216-.129-.321-.008-.018-.014-.037-.022-.055h0A4.957,4.957,0,0,0,623.1,5320.04Zm9.92-3.68a1.28,1.28,0,0,0-1.28-1.28h-2.56a1.28,1.28,0,0,0-1.28,1.28v2.561a1.28,1.28,0,0,0,1.28,1.28h2.56a1.28,1.28,0,0,0,1.28-1.28Zm0,6.56h-2.36a7.84,7.84,0,1,1-15.121,0h-2.36v10.72a1.28,1.28,0,0,0,1.28,1.281h17.28a1.28,1.28,0,0,0,1.28-1.281Z" transform="translate(-610.3 -5312.2)" fill="#f38181"/>
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="19.594" height="25.657" viewBox="0 0 19.594 25.657">
-            <path id="pinterest" d="M566.051,5328.854c-.209.833-.42,1.707-.638,2.561a19.56,19.56,0,0,1-.718,2.47,12.648,12.648,0,0,1-2.044,3.521c-.575.667-.452.4-.625.365-.132-.027-.144-.157-.169-.345a19.292,19.292,0,0,1,.008-3.339,18.041,18.041,0,0,1,.588-3.471c.484-2.064.946-4.087,1.435-6.164a1.369,1.369,0,0,0,.09-.445,6.41,6.41,0,0,1-.429-1.7,5.41,5.41,0,0,1,.139-1.943,3.208,3.208,0,0,1,1.894-2.338,2.171,2.171,0,0,1,1.734.132,1.883,1.883,0,0,1,.867,1.245,4.491,4.491,0,0,1-.08,1.892c-.267,1.218-.618,2.133-.937,3.309a3.642,3.642,0,0,0-.189,1.812,2.105,2.105,0,0,0,.848,1.275,2.464,2.464,0,0,0,1.625.456,3.552,3.552,0,0,0,2.652-1.568,9.269,9.269,0,0,0,1.674-4.686,11.514,11.514,0,0,0,.07-2.014,5.48,5.48,0,0,0-1.126-3.117,5.28,5.28,0,0,0-2.512-1.71,8.336,8.336,0,0,0-3.748-.233,6.636,6.636,0,0,0-4.914,3.533,7.078,7.078,0,0,0-.837,3.41,4.427,4.427,0,0,0,.678,2.5c.133.2.328.367.458.6.185.326-.029.812-.12,1.164-.11.425-.121,1.012-.618,1.022a1.512,1.512,0,0,1-.638-.243,5.117,5.117,0,0,1-2.422-3.734,8.937,8.937,0,0,1,0-3.238,9.214,9.214,0,0,1,4.4-6.144,10.441,10.441,0,0,1,3.907-1.346c.508-.075,1.034-.1,1.6-.132a9.638,9.638,0,0,1,4.326.81,8.848,8.848,0,0,1,2.98,2.146,8.123,8.123,0,0,1,1.834,3.31,7.977,7.977,0,0,1,.4,2.287,13.723,13.723,0,0,1-.308,2.368,9.328,9.328,0,0,1-3.838,6.458,6.643,6.643,0,0,1-1.754.81,6.409,6.409,0,0,1-2.243.283,4.6,4.6,0,0,1-1.984-.577A3.285,3.285,0,0,1,566.051,5328.854Z" transform="translate(-557.899 -5312.195)" fill="#f38181"/>
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="13.752" viewBox="0 0 16 13.752">
-            <path id="google_plus" data-name="google plus" d="M576.5,9780.717v2.439h-1v-2.439H573v-1h2.5v-2.439h1v2.439H579v1Zm-6.914-2.471a2.56,2.56,0,0,1,1.407,2.331,2.707,2.707,0,0,1-1.239,2.1c-.681.522-.81.742-.81,1.186,0,.379.729,1.024,1.111,1.29a2.848,2.848,0,0,1,1.444,2.692c0,1.5-1.444,3.169-4.116,3.169-2.344,0-4.383-1.12-4.383-2.617,0-1.521,1.866-2.987,4.209-2.987.255,0,.489-.011.732-.011a1.608,1.608,0,0,1-.574-1.15,1.714,1.714,0,0,1,.214-.785c-.127.009-.257-.012-.391-.012a3.061,3.061,0,0,1-3.214-3.058c0-1.631,1.781-3.132,3.673-3.132h4.22l-.944.982Zm-1.93,7.553c-1.62-.017-3.071.971-3.071,2.156,0,1.209,1.17,2.094,2.79,2.094,2.277,0,3.071-.822,3.071-2.032a1.819,1.819,0,0,0-.052-.428c-.178-.685-.808-1.023-1.688-1.624A3.616,3.616,0,0,0,567.656,9785.8Zm1.82-5.2a2.819,2.819,0,0,0-2.355-2.559c-1.087-.031-1.816,1.041-1.628,2.443a2.821,2.821,0,0,0,2.308,2.6C568.887,9783.108,569.663,9782,569.476,9780.6Z" transform="translate(-563 -9777.264)" fill="#95e1d3"/>
-          </svg>
-          <svg id="youtube" xmlns="http://www.w3.org/2000/svg" width="15.997" height="10.998" viewBox="0 0 15.997 10.998">
-            <path id="youtube-2" data-name="youtube" d="M606.537,9778.522l-5.225,0-5.429,0c-1.358,0-2.883.907-2.883,2.236v6.618c0,1.329,1.525,2.14,2.883,2.14h10.654a2.223,2.223,0,0,0,2.459-2.14v-6.618A2.3,2.3,0,0,0,606.537,9778.522Zm-6.573,8.043-.032-5.04,3.508,2.543Z" transform="translate(-593 -9778.519)" fill="#95e1d3"/>
-          </svg>
-          <svg id="dribbble" xmlns="http://www.w3.org/2000/svg" width="16.001" height="16.001" viewBox="0 0 16.001 16.001">
-            <path id="dribbble-2" data-name="dribbble" d="M638.838,9782.4a8.02,8.02,0,0,0-4.723-5.761,7.865,7.865,0,0,0-1.5-.466,8.04,8.04,0,0,0-3.222,0,7.872,7.872,0,0,0-1.5.466,8.022,8.022,0,0,0-2.543,1.715,8.014,8.014,0,0,0-2.181,7.268,7.97,7.97,0,0,0,1.2,2.862,7.995,7.995,0,0,0,2.16,2.16,7.994,7.994,0,0,0,8.947,0,8,8,0,0,0,2.16-2.16,7.965,7.965,0,0,0,1.2-2.862,8.052,8.052,0,0,0,0-3.222Zm-1.007,1.543a15.814,15.814,0,0,0-4.759-.225c-.048-.117-.1-.234-.147-.353-.142-.334-.3-.665-.454-.991a8.789,8.789,0,0,0,3.807-2.7A6.8,6.8,0,0,1,637.83,9783.947Zm-2.318-5.06a7.443,7.443,0,0,1-3.569,2.474,34.52,34.52,0,0,0-2.554-3.985,6.818,6.818,0,0,1,6.123,1.512Zm-6.149-1.507h0a.113.113,0,0,1-.02,0Zm-1.279.455a41.039,41.039,0,0,1,2.537,3.937,25.251,25.251,0,0,1-6.308.834A6.84,6.84,0,0,1,628.085,9777.836Zm-3.917,6.179c0-.073,0-.145.006-.216a25.063,25.063,0,0,0,7.014-.973c.2.382.383.771.554,1.16-.09.025-.18.053-.269.082a10.808,10.808,0,0,0-5.557,4.509.008.008,0,0,1,0,0A6.811,6.811,0,0,1,624.168,9784.015Zm6.833,6.833a6.8,6.8,0,0,1-4.352-1.566c.09.073.153.12.153.12a9.254,9.254,0,0,1,5.362-4.269l.045-.014a28.416,28.416,0,0,1,1.46,5.188A6.8,6.8,0,0,1,631,9790.848Zm3.818-1.166a29.507,29.507,0,0,0-1.33-4.88,9.88,9.88,0,0,1,4.258.3A6.835,6.835,0,0,1,634.818,9789.682Z" transform="translate(-623 -9776.015)" fill="#95e1d3"/>
-          </svg>
-          <svg id="tumblr" xmlns="http://www.w3.org/2000/svg" width="10.002" height="16.01" viewBox="0 0 10.002 16.01">
-            <path id="tumblr-2" data-name="tumblr" d="M666.009,9791.146a9.578,9.578,0,0,1-1.849.678,7.808,7.808,0,0,1-1.79.194,4.868,4.868,0,0,1-1.717-.275,4.17,4.17,0,0,1-1.431-.791,2.873,2.873,0,0,1-.823-1.092,4.761,4.761,0,0,1-.229-1.677v-5.614h-2.164V9780.3a5.613,5.613,0,0,0,1.8-.878,4.372,4.372,0,0,0,1.075-1.376,6.2,6.2,0,0,0,.558-2.04H661.7v3.7h3.682v2.856H661.7v4.105a7.018,7.018,0,0,0,.086,1.727,1.474,1.474,0,0,0,.607.691,2.3,2.3,0,0,0,1.208.319,4.34,4.34,0,0,0,2.406-.791Z" transform="translate(-656.007 -9776.008)" fill="#95e1d3"/>
-          </svg>                                              
+          <a href="#">
+            <svg id="facebook" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 7.505 16.006">
+              <path id="facebook-2" data-name="facebook" d="M454.993,9776.015v2.575s-1.9-.188-2.374.538a7.322,7.322,0,0,0-.129,2.4h2.518c-.213.978-.365,1.64-.522,2.486h-2.01v8h-3.489c0-2.467,0-5.345,0-7.971H447.5v-2.518h1.468c.075-1.842.1-3.666,1.018-4.594C451.018,9775.889,452,9776.015,454.993,9776.015Z" transform="translate(-447.504 -9776.01)"/>
+            </svg>                   
+          </a>
+          <a href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 25.6 20.778">
+              <path id="twitter" d="M516.513,5314.6a5.4,5.4,0,0,1,4.151,1.647,8.494,8.494,0,0,0,2.691-.907l.653-.357a5.253,5.253,0,0,1-1.7,2.465,2.526,2.526,0,0,1-.577.409v.013a9.852,9.852,0,0,0,2.973-.8v.013a8.5,8.5,0,0,1-1.781,2.044l-.82.651a15.043,15.043,0,0,1-.243,3.373c-1.312,5.9-4.787,9.9-10.289,11.612a15.722,15.722,0,0,1-7.431.306,19.191,19.191,0,0,1-3.088-1.008,12.3,12.3,0,0,1-1.486-.767l-.461-.281a8.519,8.519,0,0,0,1.678.063c.516-.083,1.023-.061,1.5-.166a10.753,10.753,0,0,0,3.152-1.137,5.855,5.855,0,0,0,1.422-.932,4.474,4.474,0,0,1-1.563-.281,5.275,5.275,0,0,1-3.331-3.36c.515.057,2,.19,2.345-.1a3.844,3.844,0,0,1-1.717-.689,5.053,5.053,0,0,1-2.473-4.5l.538.255a5.776,5.776,0,0,0,1.1.307,1.569,1.569,0,0,0,.718.063h-.026c-.265-.307-.7-.513-.961-.843a5.365,5.365,0,0,1-1.179-4.765,6.1,6.1,0,0,1,.564-1.367l.026.012a3.2,3.2,0,0,0,.474.55,9.621,9.621,0,0,0,1.563,1.494,15.462,15.462,0,0,0,6.419,3.1,10.014,10.014,0,0,0,2.358.307,4.881,4.881,0,0,1,.026-2.466,5.179,5.179,0,0,1,2.973-3.525,6.3,6.3,0,0,1,1.166-.358Z" transform="translate(-499.1 -5314.6)" />
+            </svg>
+          </a>
+          <a href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 25.6 25.6">
+              <path id="instagram" d="M632.7,5337.8H613.5a3.2,3.2,0,0,1-3.2-3.2v-19.2a3.2,3.2,0,0,1,3.2-3.2h19.2a3.2,3.2,0,0,1,3.2,3.2v19.2A3.2,3.2,0,0,1,632.7,5337.8Zm-9.6-17.76a4.957,4.957,0,0,0-4.5,2.88h0c-.008.018-.014.037-.022.055-.047.1-.089.213-.129.321-.019.053-.04.1-.057.156-.036.111-.067.225-.1.34-.013.054-.029.106-.041.16-.026.121-.044.244-.061.368-.007.05-.017.1-.023.15a4.96,4.96,0,1,0,9.862,0c-.005-.051-.016-.1-.023-.15-.017-.124-.035-.247-.061-.368-.012-.054-.028-.106-.041-.16-.029-.115-.059-.229-.1-.34-.017-.052-.038-.1-.057-.156-.04-.108-.081-.216-.129-.321-.008-.018-.014-.037-.022-.055h0A4.957,4.957,0,0,0,623.1,5320.04Zm9.92-3.68a1.28,1.28,0,0,0-1.28-1.28h-2.56a1.28,1.28,0,0,0-1.28,1.28v2.561a1.28,1.28,0,0,0,1.28,1.28h2.56a1.28,1.28,0,0,0,1.28-1.28Zm0,6.56h-2.36a7.84,7.84,0,1,1-15.121,0h-2.36v10.72a1.28,1.28,0,0,0,1.28,1.281h17.28a1.28,1.28,0,0,0,1.28-1.281Z" transform="translate(-610.3 -5312.2)" />
+            </svg>
+          </a>
+          <a href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 19.594 25.657">
+              <path id="pinterest" d="M566.051,5328.854c-.209.833-.42,1.707-.638,2.561a19.56,19.56,0,0,1-.718,2.47,12.648,12.648,0,0,1-2.044,3.521c-.575.667-.452.4-.625.365-.132-.027-.144-.157-.169-.345a19.292,19.292,0,0,1,.008-3.339,18.041,18.041,0,0,1,.588-3.471c.484-2.064.946-4.087,1.435-6.164a1.369,1.369,0,0,0,.09-.445,6.41,6.41,0,0,1-.429-1.7,5.41,5.41,0,0,1,.139-1.943,3.208,3.208,0,0,1,1.894-2.338,2.171,2.171,0,0,1,1.734.132,1.883,1.883,0,0,1,.867,1.245,4.491,4.491,0,0,1-.08,1.892c-.267,1.218-.618,2.133-.937,3.309a3.642,3.642,0,0,0-.189,1.812,2.105,2.105,0,0,0,.848,1.275,2.464,2.464,0,0,0,1.625.456,3.552,3.552,0,0,0,2.652-1.568,9.269,9.269,0,0,0,1.674-4.686,11.514,11.514,0,0,0,.07-2.014,5.48,5.48,0,0,0-1.126-3.117,5.28,5.28,0,0,0-2.512-1.71,8.336,8.336,0,0,0-3.748-.233,6.636,6.636,0,0,0-4.914,3.533,7.078,7.078,0,0,0-.837,3.41,4.427,4.427,0,0,0,.678,2.5c.133.2.328.367.458.6.185.326-.029.812-.12,1.164-.11.425-.121,1.012-.618,1.022a1.512,1.512,0,0,1-.638-.243,5.117,5.117,0,0,1-2.422-3.734,8.937,8.937,0,0,1,0-3.238,9.214,9.214,0,0,1,4.4-6.144,10.441,10.441,0,0,1,3.907-1.346c.508-.075,1.034-.1,1.6-.132a9.638,9.638,0,0,1,4.326.81,8.848,8.848,0,0,1,2.98,2.146,8.123,8.123,0,0,1,1.834,3.31,7.977,7.977,0,0,1,.4,2.287,13.723,13.723,0,0,1-.308,2.368,9.328,9.328,0,0,1-3.838,6.458,6.643,6.643,0,0,1-1.754.81,6.409,6.409,0,0,1-2.243.283,4.6,4.6,0,0,1-1.984-.577A3.285,3.285,0,0,1,566.051,5328.854Z" transform="translate(-557.899 -5312.195)" />
+            </svg>
+          </a>
+          <a href="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16 13.752">
+              <path id="google_plus" data-name="google plus" d="M576.5,9780.717v2.439h-1v-2.439H573v-1h2.5v-2.439h1v2.439H579v1Zm-6.914-2.471a2.56,2.56,0,0,1,1.407,2.331,2.707,2.707,0,0,1-1.239,2.1c-.681.522-.81.742-.81,1.186,0,.379.729,1.024,1.111,1.29a2.848,2.848,0,0,1,1.444,2.692c0,1.5-1.444,3.169-4.116,3.169-2.344,0-4.383-1.12-4.383-2.617,0-1.521,1.866-2.987,4.209-2.987.255,0,.489-.011.732-.011a1.608,1.608,0,0,1-.574-1.15,1.714,1.714,0,0,1,.214-.785c-.127.009-.257-.012-.391-.012a3.061,3.061,0,0,1-3.214-3.058c0-1.631,1.781-3.132,3.673-3.132h4.22l-.944.982Zm-1.93,7.553c-1.62-.017-3.071.971-3.071,2.156,0,1.209,1.17,2.094,2.79,2.094,2.277,0,3.071-.822,3.071-2.032a1.819,1.819,0,0,0-.052-.428c-.178-.685-.808-1.023-1.688-1.624A3.616,3.616,0,0,0,567.656,9785.8Zm1.82-5.2a2.819,2.819,0,0,0-2.355-2.559c-1.087-.031-1.816,1.041-1.628,2.443a2.821,2.821,0,0,0,2.308,2.6C568.887,9783.108,569.663,9782,569.476,9780.6Z" transform="translate(-563 -9777.264)" />
+            </svg>
+          </a>
+          <a href="">
+            <svg id="youtube" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 15.997 10.998">
+              <path id="youtube-2" data-name="youtube" d="M606.537,9778.522l-5.225,0-5.429,0c-1.358,0-2.883.907-2.883,2.236v6.618c0,1.329,1.525,2.14,2.883,2.14h10.654a2.223,2.223,0,0,0,2.459-2.14v-6.618A2.3,2.3,0,0,0,606.537,9778.522Zm-6.573,8.043-.032-5.04,3.508,2.543Z" transform="translate(-593 -9778.519)" />
+            </svg>
+          </a>
+          <a href="">
+            <svg id="dribbble" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16.001 16.001">
+              <path id="dribbble-2" data-name="dribbble" d="M638.838,9782.4a8.02,8.02,0,0,0-4.723-5.761,7.865,7.865,0,0,0-1.5-.466,8.04,8.04,0,0,0-3.222,0,7.872,7.872,0,0,0-1.5.466,8.022,8.022,0,0,0-2.543,1.715,8.014,8.014,0,0,0-2.181,7.268,7.97,7.97,0,0,0,1.2,2.862,7.995,7.995,0,0,0,2.16,2.16,7.994,7.994,0,0,0,8.947,0,8,8,0,0,0,2.16-2.16,7.965,7.965,0,0,0,1.2-2.862,8.052,8.052,0,0,0,0-3.222Zm-1.007,1.543a15.814,15.814,0,0,0-4.759-.225c-.048-.117-.1-.234-.147-.353-.142-.334-.3-.665-.454-.991a8.789,8.789,0,0,0,3.807-2.7A6.8,6.8,0,0,1,637.83,9783.947Zm-2.318-5.06a7.443,7.443,0,0,1-3.569,2.474,34.52,34.52,0,0,0-2.554-3.985,6.818,6.818,0,0,1,6.123,1.512Zm-6.149-1.507h0a.113.113,0,0,1-.02,0Zm-1.279.455a41.039,41.039,0,0,1,2.537,3.937,25.251,25.251,0,0,1-6.308.834A6.84,6.84,0,0,1,628.085,9777.836Zm-3.917,6.179c0-.073,0-.145.006-.216a25.063,25.063,0,0,0,7.014-.973c.2.382.383.771.554,1.16-.09.025-.18.053-.269.082a10.808,10.808,0,0,0-5.557,4.509.008.008,0,0,1,0,0A6.811,6.811,0,0,1,624.168,9784.015Zm6.833,6.833a6.8,6.8,0,0,1-4.352-1.566c.09.073.153.12.153.12a9.254,9.254,0,0,1,5.362-4.269l.045-.014a28.416,28.416,0,0,1,1.46,5.188A6.8,6.8,0,0,1,631,9790.848Zm3.818-1.166a29.507,29.507,0,0,0-1.33-4.88,9.88,9.88,0,0,1,4.258.3A6.835,6.835,0,0,1,634.818,9789.682Z" transform="translate(-623 -9776.015)" />
+            </svg>
+          </a>
+          <a href="">
+            <svg id="tumblr" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 10.002 16.01">
+              <path id="tumblr-2" data-name="tumblr" d="M666.009,9791.146a9.578,9.578,0,0,1-1.849.678,7.808,7.808,0,0,1-1.79.194,4.868,4.868,0,0,1-1.717-.275,4.17,4.17,0,0,1-1.431-.791,2.873,2.873,0,0,1-.823-1.092,4.761,4.761,0,0,1-.229-1.677v-5.614h-2.164V9780.3a5.613,5.613,0,0,0,1.8-.878,4.372,4.372,0,0,0,1.075-1.376,6.2,6.2,0,0,0,.558-2.04H661.7v3.7h3.682v2.856H661.7v4.105a7.018,7.018,0,0,0,.086,1.727,1.474,1.474,0,0,0,.607.691,2.3,2.3,0,0,0,1.208.319,4.34,4.34,0,0,0,2.406-.791Z" transform="translate(-656.007 -9776.008)" />
+            </svg>                                              
+          </a>
         </div>
-        <div>
+        <form method="post">
           <input type="text" placeholder="Your Email">
-          <button>Subscribe</button>
-        </div>
+          <button type="submit">Subscribe</button>
+        </form>
       </div>
-      <div>
-        <p>Blogs</p>
-        <div>
+      <div class="info__blogs">
+        <h5>Blogs</h5>
+        <div class="info__blogs__post">
           <img src="img/blogs-1.jpg" alt="">
-          <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
+          <div class="info__blogs__post__title">
+            <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
             <p>Jan 9, 2016</p>
+          </div>
         </div>
-        <div>
+        <div class="info__blogs__post">
           <img src="img/blogs-2.jpg" alt="">
-          <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
+          <div class="info__blogs__post__title">
+            <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
             <p>Jan 9, 2016</p>
+          </div>
         </div>
-        <div>
+        <div class="info__blogs__post">
           <img src="img/blogs-3.jpg" alt="">
-          <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
+          <div class="info__blogs__post__title">
+            <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
             <p>Jan 9, 2016</p>
+          </div>
         </div>
       </div>
-      <div>
-        <p>instagram</p>
-        <div>
+      <div class="info__insta">
+        <h5>instagram</h5>
+        <div class="info__insta__imgs">
           <img src="img/instagram-1.jpg" alt="">
           <img src="img/instagram-2.jpg" alt="">
           <img src="img/instagram-3.jpg" alt="">
@@ -650,7 +673,7 @@
       </div>
     </article>
     <footer>
-      <p>© 2016 MoGo free PSD template by Laaqiq</p>
+      <p>© 2016 MoGo free PSD template by <span>Laaqiq</span></p>
     </footer>
     
     <script src="js/index.js" async defer></script>
