Finish testimonials-grid all devices layout

--- a/index.html
+++ b/index.html
@@ -474,25 +474,25 @@
         <h4>Happy Clients</h4>
         <h3>What People Say</h3>
       </div>
-      <div class="testimonials-grid__client">
+      <div class="testimonials-grid__client testimonials-grid__client--c2r2">
         <img src="img/client-1.jpg" alt="">
         <p class="testimonials-grid__client__name">Matthew Dix</p>
         <p class="testimonials-grid__client__occupation">Graphic Design</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
       </div>
-      <div class="testimonials-grid__client">
+      <div class="testimonials-grid__client testimonials-grid__client--c3r2">
         <img src="img/client-2.jpg" alt="">
         <p class="testimonials-grid__client__name">Jaelynn Castillo</p>
         <p class="testimonials-grid__client__occupation">Graphic Design</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
       </div>
-      <div class="testimonials-grid__client">
+      <div class="testimonials-grid__client testimonials-grid__client--c2r3">
         <img src="img/client-3.jpg" alt="">
         <p class="testimonials-grid__client__name">Nick Karvounis</p>
         <p class="testimonials-grid__client__occupation">Graphic Design</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
       </div>
-      <div class="testimonials-grid__client">
+      <div class="testimonials-grid__client testimonials-grid__client--c3r3">
         <img src="img/client-4.jpg" alt="">
         <p class="testimonials-grid__client__name">Mike Petrucci</p>
         <p class="testimonials-grid__client__occupation">Graphic Design</p>
